--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -60,11 +60,15 @@
     <div>
       <amp-list
         src="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
+        id="invoiceList"
         binding="no"
         layout="fixed-height"
+        single-item
+        items="."
         height="10"
       >
         <template type="amp-mustache">
+          {{#items}}
           <div class="item-wrapper">
             <div class="item">
               <div class="item-head">
@@ -79,6 +83,7 @@
                   <form
                     method="post"
                     action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
+                    on="submit-success:invoiceList.refresh"
                   >
                     <input
                       type="hidden"
@@ -93,6 +98,7 @@
                   <form
                     method="post"
                     action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
+                    on="submit-success:invoiceList.refresh"
                   >
                     <input
                       type="hidden"
@@ -138,6 +144,16 @@
               </div>
             </div>
           </div>
+          {{/items}} {{^items}}
+          <div>Nincs több pàlinka. Elfogyott.</div>
+          <amp-img
+            alt="Pocok logo"
+            src="[[.PocokLogo]]"
+            width="200px"
+            height="200px"
+          >
+          </amp-img>
+          {{/items}}
         </template>
       </amp-list>
     </div>
