--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -45,7 +45,6 @@
       .item {
         display: flex;
         flex-direction: column;
-        align-items: space-between;
         padding: 8px;
         border-radius: 16px;
         border: 1px solid black;
@@ -110,6 +109,9 @@
         padding: 32px;
         border: 1px solid black;
         border-radius: 16px;
+      }
+      .hidden {
+        display: none;
       }
     </style>
   </head>
@@ -441,7 +443,14 @@
               </div>
             </div>
           </div>
-          {{/items}} {{^items}}
+          {{/items}}
+          <form class="{{^items}}hidden{{/items}}" method="POST" action-xhr="[[.ApiUrl]]/api/invoices/accept_all?token=[[.Token]]" on="submit-success:invoiceList.refresh">
+            {{#items}}
+              <input type="hidden" name={{invoiceId}} value="accept" hidden />
+            {{/items}}
+            <input type="submit" value="Accept all" />
+          </form>
+          {{^items}}
           <div>Nincs több pàlinka. Elfogyott.</div>
           <amp-img
             alt="Pocok logo"
