--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -138,11 +138,15 @@
             <div class="item item-view" id="{{invoiceId}}-item-view">
               <div class="item-header">
                 <div>
-                  <div>{{invoiceId}} {{status}}</div>
+                  <div>ID: {{invoiceId}}</div>
+                  <div>Status: {{status}}</div>
                   <div>Received at: {{receivedAt}}</div>
-                  <div>Due: {{dueDate}}</div>
-                  <div>Iban: {{iban}}</div>
+                  <br />
                   <div>Vendor Name: {{vendorName}}</div>
+                  <div>Vendor Email: {{vendorEmail}}</div>
+                  <div>Iban: {{iban}}</div>
+                  <div>Bank account: {{accountNumber}}</div>
+                  <br />
                   <div>Gross Price: {{grossPrice}} {{currency}}</div>
                 </div>
                 <div class="item-header-actions">
@@ -213,16 +217,14 @@
               </div>
 
               <div class="item-content">
-                <div>
-                  <div>ID: {{invoiceId}}</div>
-                  <div>Iban: {{iban}}</div>
+                <div>                  
                   <div>Invoice Number: {{invoiceNumber}}</div>
-                  <div>Vendor Email: {{vendorEmail}}</div>
-                  <div>Net Price: {{netPrice}}</div>
-                  <div>Gross Price: {{grossPrice}}</div>
-                  <div>Currency: {{currency}}</div>
-                  <div>Vat Amount: {{vatAmount}}</div>
+                  <div>Net Price: {{netPrice}} {{currency}}</div>
+                  <div>Gross Price: {{grossPrice}} {{currency}}</div>
+                  <div>Vat Amount: {{vatAmount}} {{currency}}</div>
                   <div>Vat Rate: {{vatRate}}</div>
+                  <br />
+                  <div>Due: {{dueDate}}</div>
                   <div>
                     <div>
                       <p>Services:</p>
@@ -444,9 +446,14 @@
             </div>
           </div>
           {{/items}}
-          <form class="{{^items}}hidden{{/items}}" method="POST" action-xhr="[[.ApiUrl]]/api/invoices/accept_all?token=[[.Token]]" on="submit-success:invoiceList.refresh">
+          <form
+            class="{{^items}}hidden{{/items}}"
+            method="POST"
+            action-xhr="[[.ApiUrl]]/api/invoices/accept_all?token=[[.Token]]"
+            on="submit-success:invoiceList.refresh"
+          >
             {{#items}}
-              <input type="hidden" name={{invoiceId}} value="accept" hidden />
+            <input type="hidden" name="{{invoiceId}}" value="accept" hidden />
             {{/items}}
             <input type="submit" value="Accept all" />
           </form>
