--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -138,16 +138,16 @@
             <div class="item item-view" id="{{invoiceId}}-item-view">
               <div class="item-header">
                 <div>
-                  <div>ID: {{invoiceId}}</div>
-                  <div>Status: {{status}}</div>
-                  <div>Received at: {{receivedAt}}</div>
+                  <div>ID: {{invoice.invoiceId}}</div>
+                  <div>Status: {{invoice.status}}</div>
+                  <div>Received at: {{invoice.receivedAt}}</div>
                   <br />
-                  <div>Vendor Name: {{vendorName}}</div>
-                  <div>Vendor Email: {{vendorEmail}}</div>
-                  <div>Iban: {{iban}}</div>
-                  <div>Bank account: {{accountNumber}}</div>
+                  <div>Vendor Name: {{invoice.vendorName}}</div>
+                  <div>Vendor Email: {{invoice.vendorEmail}}</div>
+                  <div>Iban: {{invoice.iban}}</div>
+                  <div>Bank account: {{invoice.accountNumber}}</div>
                   <br />
-                  <div>Gross Price: {{grossPrice}} {{currency}}</div>
+                  <div>Gross Price: {{invoice.grossPrice}} {{invoice.currency}}</div>
                 </div>
                 <div class="item-header-actions">
                   <div>
@@ -218,18 +218,18 @@
 
               <div class="item-content">
                 <div>                  
-                  <div>Invoice Number: {{invoiceNumber}}</div>
-                  <div>Net Price: {{netPrice}} {{currency}}</div>
-                  <div>Gross Price: {{grossPrice}} {{currency}}</div>
-                  <div>Vat Amount: {{vatAmount}} {{currency}}</div>
-                  <div>Vat Rate: {{vatRate}}</div>
+                  <div>Invoice Number: {{invoice.invoiceNumber}}</div>
+                  <div>Net Price: {{invoice.netPrice}} {{invoice.currency}}</div>
+                  <div>Gross Price: {{invoice.grossPrice}} {{invoice.currency}}</div>
+                  <div>Vat Amount: {{invoice.vatAmount}} {{invoice.currency}}</div>
+                  <div>Vat Rate: {{invoice.vatRate}}</div>
                   <br />
-                  <div>Due: {{dueDate}}</div>
+                  <div>Due: {{invoice.dueDate}}</div>
                   <div>
                     <div>
                       <p>Services:</p>
                     </div>
-                    {{#services}}
+                    {{#invoice.services}}
                     <div>
                       <div>Name: {{name}}</div>
                       <div>Amount: {{amount}}</div>
@@ -241,17 +241,18 @@
                       <div>Vat Amount: {{vatAmount}}</div>
                       <div>Vat Rate:{{vatRate}}</div>
                     </div>
-                    {{/services}}
+                    {{/invoice.services}}
                   </div>
                 </div>
+                <a href="{{link}}">PDF link</a>
               </div>
             </div>
 
             <div class="item item-edit" id="{{invoiceId}}-item-edit" hidden>
               <div class="item-header">
                 <div>
-                  <div>{{invoiceId}} {{status}}</div>
-                  <div>Received at: {{receivedAt}}</div>
+                  <div>{{invoice.invoiceId}} {{invoice.status}}</div>
+                  <div>Received at: {{invoice.receivedAt}}</div>
                 </div>
                 <div class="item-header-actions">
                   <div>
@@ -281,12 +282,12 @@
                       <input
                         type="text"
                         name="invoiceNumber"
-                        value="{{invoiceNumber}}"
+                        value="{{invoice.invoiceNumber}}"
                       />
                     </label>
                     <label>
                       Due Date:
-                      <input type="text" name="dueDate" value="{{dueDate}}" />
+                      <input type="text" name="dueDate" value="{{invoice.dueDate}}" />
                     </label>
                   </fieldset>
 
@@ -298,7 +299,7 @@
                       <input
                         type="text"
                         name="vendorName"
-                        value="{{vendorName}}"
+                        value="{{invoice.vendorName}}"
                       />
                     </label>
                     <label>
@@ -306,14 +307,14 @@
                       <input
                         type="text"
                         name="vendorEmail"
-                        value="{{vendorEmail}}"
+                        value="{{invoice.vendorEmail}}"
                         pattern="[a-z0-9]*@[a-z0-9]*[\.].[a-z0-9]*"
                       />
                     </label>
 
                     <label>
                       Iban:
-                      <input type="text" name="iban" value="{{iban}}" />
+                      <input type="text" name="iban" value="{{invoice.iban}}" />
                     </label>
 
                     <label>
@@ -321,7 +322,7 @@
                       <input
                         type="text"
                         name="accountNumber"
-                        value="{{accountNumber}}"
+                        value="{{invoice.accountNumber}}"
                       />
                     </label>
                   </fieldset>
@@ -330,37 +331,37 @@
                     <legend>Prices</legend>
                     <label>
                       Net Price:
-                      <input type="text" name="netPrice" value="{{netPrice}}" />
+                      <input type="text" name="netPrice" value="{{invoice.netPrice}}" />
                     </label>
                     <label>
                       Gross Price:
                       <input
                         type="text"
                         name="grossPrice"
-                        value="{{grossPrice}}"
+                        value="{{invoice.grossPrice}}"
                       />
                     </label>
                     <label>
                       Currency:
-                      <input type="text" name="currency" value="{{currency}}" />
+                      <input type="text" name="currency" value="{{invoice.currency}}" />
                     </label>
                     <label>
                       Vat Amount:
                       <input
                         type="text"
                         name="vatAmount"
-                        value="{{vatAmount}}"
+                        value="{{invoice.vatAmount}}"
                       />
                     </label>
                     <label>
                       Vat Rate:
-                      <input type="text" name="vatRate" value="{{vatRate}}" />
+                      <input type="text" name="vatRate" value="{{invoice.vatRate}}" />
                     </label>
                   </fieldset>
 
                   <fieldset>
                     <legend>Services</legend>
-                    {{#services}}
+                    {{#invoice.services}}
                     <fieldset>
                       <legend>{{name}}</legend>
 
@@ -429,7 +430,7 @@
                         /></label>
                       </div>
                     </fieldset>
-                    {{/services}}
+                    {{/invoice.services}}
                   </fieldset>
 
                   <div class="edit-actions">
@@ -453,7 +454,7 @@
             on="submit-success:invoiceList.refresh"
           >
             {{#items}}
-            <input type="hidden" name="{{invoiceId}}" value="accept" hidden />
+            <input type="hidden" name="{{invoice.invoiceId}}" value="accept" hidden />
             {{/items}}
             <input type="submit" value="Accept all" />
           </form>
